reviews frontend done

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -5,9 +5,12 @@
     <title>Yap App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <!-- <link rel="icon" href="%PUBLIC_URL%/yap-icon" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/65f2119b42.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="yap-logo3.png">
+    <link rel="icon" type="image/png" href="./images/yap-icon.ico">
+    <!-- <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/236/184/png-transparent-yelp-computer-icons-logo-yelp-logo-desktop-wallpaper-google-logo-thumbnail.png"> -->
+    <!-- <link rel="icon" type="image/png" href="https://www.pngkey.com/png/detail/15-154442_logo-free-transparent-logos-yelp-icon.png"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
   </head>
