--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,24 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Yap App</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <!-- <link rel="icon" href="%PUBLIC_URL%/yap-icon" /> -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://kit.fontawesome.com/65f2119b42.js" crossorigin="anonymous"></script>
-    <!-- <link rel="icon" type="image/png" href="./images/yap-icon.ico"> -->
-    <!-- <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/236/184/png-transparent-yelp-computer-icons-logo-yelp-logo-desktop-wallpaper-google-logo-thumbnail.png"> -->
-    <link rel="icon" type="image/png" href="https://www.pngkey.com/png/detail/15-154442_logo-free-transparent-logos-yelp-icon.png">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-    </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Yap App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+  <!-- <link rel="icon" href="%PUBLIC_URL%/yap-icon" /> -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <script src="https://kit.fontawesome.com/65f2119b42.js" crossorigin="anonymous"></script>
+  <!-- <link rel="icon" type="image/png" href="./images/yap-icon.ico"> -->
+  <!-- <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/236/184/png-transparent-yelp-computer-icons-logo-yelp-logo-desktop-wallpaper-google-logo-thumbnail.png"> -->
+  <link rel="icon" type="image/png"
+    href="https://www.pngkey.com/png/detail/15-154442_logo-free-transparent-logos-yelp-icon.png">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/index.css">
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+<footer class="footer">
+  <!-- <hr id="hr-footer" > -->
+  <div class="footer-row-1">
+    <div class="footer-col1">
+      <div class="footer-logo">
+        Yap<span style="font-weight: bold;"> </span>
+      </div>
+
+      <div class="footer-row-2">
+        <!-- <div class="footer-logo">
+          Yap<span style="font-weight: bold;"> </span>
+        </div> -->
+        <div class="footer-row-1-left-section">
+          <p> My Github </p>
+          <!-- <img id="github-png" src="/images/GitHub.png"> -->
+          <a class="fa-brands fa-square-github" href="https://github.com/EhabZak"></a>
+        </div>
+        <div class="footer-row-2-right-section">
+
+          <!-- <a class="footer-social-links" href="https://github.com/EhabZak" target="_blank">Zak</a> -->
+        </div>
+        <div class="footer-row-2">
+
+          <div class="footer-row-2-left-section">
+           <p> My Linked In </p>
+            <!-- <img id="github-png" src="/images/GitHub.png"> -->
+            <a class="fa-brands fa-linkedin" href=" https://www.linkedin.com/in/zak-alashqar/"></a>
+          </div>
+          <div class="footer-row-2-right-section" >
+
+            <!-- <a class="footer-social-links" href=" https://www.linkedin.com/in/zak-alashqar/" target="_blank">Zak</a> -->
+          </div>
+        </div>
+      </div>
+</footer>
+
 </html>
